--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,3 +1,8 @@
+html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +10,40 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  width: 100%;
+  float: left;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+}
+
+.appContainer {
+  float: left;
+  height: 100%;
+  width: 100%;
+  background: #e6e6e6;
+  box-shadow: 0px 0px 177px -26px rgba(0, 0, 0, 0.45);
+}
+
+.topDummyHeaderBar {
+  height: 5%;
+  width: 100%;
+}
+
+.buttonWrapper{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  max-height: 93%;
 }
