--- a/src/style/index.css
+++ b/src/style/index.css
@@ -21,8 +21,9 @@ code {
 }
 
 #root {
-  height: 100%;
-  width: 100%;
+  width: 90%;
+  height: calc(100% - 140px);
+  margin: 70px 5%;
 }
 
 .appContainer {
@@ -33,11 +34,6 @@ code {
   box-shadow: 0px 0px 177px -26px rgba(0, 0, 0, 0.45);
 }
 
-.topDummyHeaderBar {
-  height: 5%;
-  width: 100%;
-}
-
 .buttonWrapper{
   position: absolute;
   left: 50%;
@@ -46,4 +42,10 @@ code {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   max-height: 93%;
+}
+
+.screenContainer {
+  height: calc(100% - 64px);
+  width: 100%;
+  float: left;
 }
