--- a/src/libraries/editabletable/style-editable-table.scss
+++ b/src/libraries/editabletable/style-editable-table.scss
@@ -1,138 +1,128 @@
+.empty {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 100%;
+}
+
 .contentGridViewContainer {
-  height: 100%;
-  background-image: linear-gradient(#f8f8f8, #fafafa);
-
-  .lazyScrollView {
-    height: calc(100% - 30px);
-    padding-left: 7px;
-  }
-
-
-  .loadMoreContainer {
-    &:hover {
-      height: 30px;
-      padding: 3px;
-
-      .loadMoreButton {
-        line-height: 23px;
-      }
-    }
-  }
+    height: 100%;
+    background-image: linear-gradient(#f8f8f8, #fafafa);
 }
 
 .gridTableContainerWrapper {
-  width: auto;
-  background: #fcfcfc;
-  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
-  margin: 10px;
-  overflow: auto;
-  margin-left: 45px;
+    width: auto;
+    height: calc(100% - 30px);
+    background: #fcfcfc;
+    margin: 15px;
+    border: 1px solid #eaeaea;
+    overflow: auto;
 
-  .gridTableContainer {
-    padding: 10px;
-    display: inline-block;
-    float: left;
-    /*border-collapse: separate;*/
-    .gridTableHeader {
-      th {
-        min-width: 150px;
-        border: 1px solid #eee;
-        padding: 5px 10px;
-        /*position: relative;*/
-        background: #fafafa;
-        font-weight: 500;
-        text-align: center;
-      }
+    .gridTableContainer {
+        padding: 10px;
+        display: inline-block;
+        float: left;
 
-      .gridViewHeaderWrapper{
-        overflow: hidden;
-
-        .gridViewHeaderText{
-          width: calc(100% - 40px);
-          overflow: hidden;
-          text-overflow: ellipsis;
-          white-space: nowrap;
-          float: left;
-        }
-
-        &:hover{
-          .gridViewHeaderMoveRight, .gridViewHeaderMoveLeft{
-            opacity: .5;
-          }
-        }
-      }
-    }
-    .gridTableBody {
-
-      tr {
-        background-color: #fff;
-
-        &.dirty {
-          background-color: #fdf9ce;
-        }
-      }
-
-      td {
-        min-width: 150px;
-        border: 1px solid #eee;
-        padding: 5px 10px;
-        /*position: relative;*/
-      }
-
-      .multiSelectSearchLabel {
-        display: none;
-      }
-
-      .tagsSectionHeader {
-        display: none;
-      }
-
-      .searchBarView {
-        min-height: auto;
-      }
-
-      .tagsSectionBody {
-        border-bottom: 0;
-        padding: 0;
-        width: 180px;
-        .customTreeNodeWrapper {
-          padding: 0 0 2px 0;
-          border: none;
-          border-radius: 0;
-          margin: 0 0 2px 0;
-          overflow: hidden;
-          box-shadow: 0 1px 0 0 #ddd;
-          .tagName {
-            &.fullLengthTagName {
-              width: 100%;
-              background: transparent;
-              margin-bottom: 0;
-              text-align: left;
-              font-size: 10px;
-              color: #777;
-              font-weight: 500;
-              padding: 0 13px;
+        .gridTableHeader {
+            th {
+                min-width: 150px;
+                border: 1px solid #eee;
+                padding: 5px 10px;
+                /*position: relative;*/
+                background: #fafafa;
+                font-weight: 500;
+                text-align: center;
             }
-          }
-          .tagDetail {
-            &.fullLengthTagDetail {
-              text-align: left;
+
+            .gridViewHeaderWrapper {
+                overflow: hidden;
+
+                .gridViewHeaderText {
+                    width: calc(100% - 40px);
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    float: left;
+                }
+
+                &:hover {
+                    .gridViewHeaderMoveRight, .gridViewHeaderMoveLeft {
+                        opacity: .5;
+                    }
+                }
             }
-          }
         }
-      }
 
-      .gridElementError {
-        color: #e57373;
-        font-size: 10px;
-      }
+        .gridTableBody {
 
-      .fr-counter{
-        border: none;
-        background: #f7f7f7;
-        font-size: 12px;
-        font-family: "Open Sans";
-      }
+            tr {
+                background-color: #fff;
+
+                &.dirty {
+                    background-color: #fdf9ce;
+                }
+            }
+
+            td {
+                min-width: 150px;
+                border: 1px solid #eee;
+                padding: 5px 10px;
+                /*position: relative;*/
+            }
+
+            .multiSelectSearchLabel {
+                display: none;
+            }
+
+            .tagsSectionHeader {
+                display: none;
+            }
+
+            .searchBarView {
+                min-height: auto;
+            }
+
+            .tagsSectionBody {
+                border-bottom: 0;
+                padding: 0;
+                width: 180px;
+
+                .customTreeNodeWrapper {
+                    padding: 0 0 2px 0;
+                    border: none;
+                    border-radius: 0;
+                    margin: 0 0 2px 0;
+                    overflow: hidden;
+                    box-shadow: 0 1px 0 0 #ddd;
+
+                    .tagName {
+                        &.fullLengthTagName {
+                            width: 100%;
+                            background: transparent;
+                            margin-bottom: 0;
+                            text-align: left;
+                            font-size: 10px;
+                            color: #777;
+                            font-weight: 500;
+                            padding: 0 13px;
+                        }
+                    }
+
+                    .tagDetail {
+                        &.fullLengthTagDetail {
+                            text-align: left;
+                        }
+                    }
+                }
+            }
+
+            .gridElementError {
+                color: #e57373;
+                font-size: 10px;
+            }
+        }
     }
-  }
 }
