table export done

--- a/src/libraries/editabletable/style-editable-table.scss
+++ b/src/libraries/editabletable/style-editable-table.scss
@@ -20,7 +20,18 @@
         .buttonClass {
             float: right;
             margin: 0 5px;
+
+            &.exportButton{
+                float: left;
+                margin: 0;
+            }
+
+            &.saveButton{
+                margin-right: 0;
+            }
         }
+
+
     }
 
     .gridTableContainerWrapper {
