--- a/src/style/style-extraction-details-view.scss
+++ b/src/style/style-extraction-details-view.scss
@@ -25,12 +25,16 @@
 
         .extractionListViewPanel{
             height: 100%;
-            width: 25%;
+            width: 30%;
+            overflow: auto;
+            float: left;
+            border-right: 1px solid #eaeaea;
         }
 
         .extractionPdfViewContainer{
             height: 100%;
-            width: 75%;
+            width: 70%;
+            float: left;
         }
     }
 }
