--- a/src/libraries/draggablelistgroup/style-draggable-list-group-view.scss
+++ b/src/libraries/draggablelistgroup/style-draggable-list-group-view.scss
@@ -16,7 +16,11 @@
         height: 40px;
         line-height: 40px;
         width: 100%;
-        padding-left: 15px;
+        padding: 0 15px;
         border-top: 1px solid #f0f0f0;
+
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
