extraction pdf view done

--- a/src/libraries/PDFView/style-pdf-viewer.scss
+++ b/src/libraries/PDFView/style-pdf-viewer.scss
@@ -3,7 +3,19 @@
     float: left;
     height: 100%;
     width: 100%;
+    min-height: fit-content;
+    min-width: fit-content;
+    position: relative;
 
+    .emptyPdf {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        width: 100%;
+    }
 
     .documentWrapper {
 
