extraction export all done

--- a/src/libraries/editabletable/style-editable-table.scss
+++ b/src/libraries/editabletable/style-editable-table.scss
@@ -94,6 +94,10 @@
                     /*position: relative;*/
                 }
 
+                .tableFixedColumn {
+                    max-width: 250px;
+                }
+
             }
         }
     }
