--- a/src/style/style-extraction-details-view.scss
+++ b/src/style/style-extraction-details-view.scss
@@ -47,6 +47,15 @@
             overflow: auto;
             float: left;
             border-right: 1px solid #eaeaea;
+            position: relative;
+
+            .emptyExtractionListPanel {
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+                width: 100%;
+            }
         }
 
         .extractionPdfViewContainer{
