--- a/src/libraries/fileuploader/style-file-uploader-view.scss
+++ b/src/libraries/fileuploader/style-file-uploader-view.scss
@@ -1,4 +1,20 @@
 .pdfUploadContainer{
     position: absolute;
     bottom: 0;
+    left: 0;
+
+    .pdfUploadAntBtn{
+        position: relative;
+
+        .pdfUploadInput{
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            background: transparent;
+            cursor: pointer;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+    }
 }
