editable table view css and create button message

--- a/src/libraries/editabletable/style-editable-table.scss
+++ b/src/libraries/editabletable/style-editable-table.scss
@@ -98,6 +98,22 @@
                     max-width: 250px;
                 }
 
+                .tableRow{
+
+                    .tableCellInput{
+                        border: none;
+                        border-bottom: 1px solid #80808091;
+                        outline: none;
+                        transition: all ease 0.2s;
+                        &:focus{
+                            border-bottom: 1px solid #000;
+                        }
+                        &:hover{
+                            border-bottom: 1px solid #000;
+                        }
+                    }
+                }
+
             }
         }
     }
