--- a/src/libraries/editabletable/style-editable-table.scss
+++ b/src/libraries/editabletable/style-editable-table.scss
@@ -102,7 +102,7 @@
 
                     .tableCellInput{
                         border: none;
-                        border-bottom: 1px solid #80808091;
+                        border-bottom: 1px solid #fff;
                         outline: none;
                         transition: all ease 0.2s;
                         &:focus{
