pdf upload bug fixed

--- a/src/libraries/fileuploader/style-file-uploader-view.scss
+++ b/src/libraries/fileuploader/style-file-uploader-view.scss
@@ -1,7 +1,7 @@
 .pdfUploadContainer{
     position: absolute;
-    bottom: 0;
-    left: 0;
+    bottom: 15px;
+    left: 15px;
 
     .pdfUploadAntBtn{
         position: relative;
